spacing control isLinked color issue fixed

--- a/assets/blocks/blocks-editor.css
+++ b/assets/blocks/blocks-editor.css
@@ -64,7 +64,7 @@
   box-shadow: none;
   outline: none;
 }
-.dp-space-controls ul li button.not {
+.dp-space-controls ul li button.no {
   background: transparent;
 }
 .dp-space-controls ul li:last-child {
