--- a/src/components/DpSpacingControls/editor.scss
+++ b/src/components/DpSpacingControls/editor.scss
@@ -40,7 +40,7 @@
                     box-shadow: none;
                     outline: none;
                 }
-                &.not{
+                &.no{
                     background: transparent; 
                 }
             }
